--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   spotify_sdk:
   flutter_dotenv: ^5.0.2
   flutter_launcher_icons: "^0.11.0"
+  dart_frog: ^0.3.0
+  json_serializable:
+  json_annotation:
+  equatable:
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +53,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
