--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   equatable:
   dio: ^4.0.6
   loading_animation_widget:
+  hooks_riverpod:
+  flutter_hooks:
 
 dev_dependencies:
   flutter_test:
